somme adjustments in swagger
