# swagger.json
@@ -25,13 +25,7 @@
                 }
             }
         },
-
-
-
-
-
-
-        "/users/registration" : {
+        "/api/v1/users/registration" : {
             "post" : {
                 "tags" : [
                     "Users"
@@ -70,7 +64,7 @@
                 }
             }
         },
-        "/users/login" : {
+        "/api/v1/users/login" : {
             "post" : {
                 "tags" : [
                     "Users"
@@ -109,24 +103,7 @@
                 }
             }
         },
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        "/users/:id/projects" : {
+        "/api/v1/users/{id}/projects" : {
             "get" : {
                 "tags" : [
                     "Users"
@@ -134,6 +111,14 @@
                 "summary" : "Get User Projects",
                 "description" : "Get all projects of a user from database.",
                 "operationId" : "getUserProjects",
+                "parameters": [
+                    {
+                      "name": "id",
+                      "in": "path",
+                      "description": "Id of the project.",
+                      "required": true
+                    }
+                ],
                 "responses" : {
                     "200" : {
                         "description": "List of projects",
@@ -154,7 +139,7 @@
                 }
             }
         },
-        "/projects" : {
+        "/api/v1/projects" : {
             "get" : {
                 "tags" : [
                     "Projects"
@@ -216,7 +201,7 @@
                 }
             }
         },
-        "/projects/{id}" : {
+        "/api/v1/projects/{id}" : {
             "get" : {
                 "tags" : [
                     "Projects"
@@ -317,7 +302,7 @@
                 }
             }
         },
-        "/projects/{id}/tasks" : {
+        "/api/v1/projects/{id}/tasks" : {
             "get" : {
                 "tags" : [
                     "Projects"
@@ -353,7 +338,7 @@
                 }
             }
         },
-        "/tasks" : {
+        "/api/v1/tasks" : {
             "get" : {
                 "tags" : [
                     "Tasks"
@@ -415,7 +400,7 @@
                 }
             }
         },
-        "/tasks/{id}" : {
+        "/api/v1/tasks/{id}" : {
             "get" : {
                 "tags" : [
                     "Tasks"
@@ -516,7 +501,7 @@
                 }
             }
         },
-        "/tasks/{id}/finish" : {
+        "/api/v1/tasks/{id}/finish" : {
             "patch" : {
                 "tags" : [
                     "Tasks"
@@ -645,13 +630,6 @@
                 }
             }
         },
-
-
-
-
-
-
-
         "examples" : {
             "TaskPayload" : {
                 "type": "object",
@@ -715,7 +693,6 @@
                     } 
                 }
             },
-
             "UserRegistrationOk" : {
                 "properties" : { 
                     "user" : {
